[package]
name = "yew-scroll"
version = "0.1.0"
description = "🔝 A sleek and customizable Yew component for effortless scroll to top functionality."
license = "MIT"
keywords = ["scroll-to-top", "yew", "rust", "yew-scroll"]
repository = "https://github.com/wiseaidev/yew-scroll"
documentation = "https://docs.rs/yew-scroll/"
authors = ["Mahmoud Harmouch <oss@wiseai.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gloo = { version = "0.11.0", features = ["utils"] }
yew = { version = "0.21.0", default-features = false }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = "thin"
strip = "symbols"
